--- a/display.css
+++ b/display.css
@@ -74,6 +74,7 @@ pre.highlighted { border: thin solid #f0f0f0; padding-right: 1ex; max-width:calc
 .highlighted .string { font-weight:bold; color: #008000; }
 .highlighted .number { color: #0000ff; }
 .highlighted .keyword { font-weight: bold; color: #000080; }
+.highlighted .special { font-style: italic; color:#8080FF; }
 
 
 .person { border: thin solid white; background-color: rgba(255,255,255,0.5); padding:0.25ex; }
